﻿PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2010, PHP 5.3.4
- Fixed bug #47168 (printf of floating point variable prints maximum of 40 
  decimal places). (Ilia)

18 Nov 2010, PHP 5.3.4RC1
- Upgraded bundled Sqlite3 to version 3.7.3. (Ilia)
- Upgraded bundled PCRE to version 8.10. (Ilia)

- Reverted fix for bug #51176 (Static calling in non-static method behaves
  like $this->). (Felipe)

- Added stat support for zip stream. (Pierre)
- Added follow_location (enabled by default) option for the http stream 
  support. (Pierre)
- Added new character sets to mysqlnd, which are available in MySQL 5.5
  (Andrey)
- Improved support for is_link and related functions on Windows. (Pierre)

- Added '-p/--prefix' to php-fpm to use a custom prefix and run multiple
  instances. (fat)
- Added support for the ( and ) delimiters/separators to
  DateTime::createFromFormat(). (Derick)
- Added custom process title for FPM. (fat)
- Added '-t/--test' to php-fpm to check and validate FPM conf file. (fat)
- Added statistics about listening socket queue length for FPM.
  (andrei dot nigmatulin at gmail dot com, fat)
- Implemented FR #52348, Ability to detect zend multibyte at runtime. (Kalle)
- Implemented FR #52173, added functions pcntl_get_last_error() and 
  pcntl_strerror(). (nick dot telford at gmail dot com, Arnaud)
- Implemented symbolic links support for open_basedir checks. (Pierre)
- Implemented FR #51804, SplFileInfo::getLinkTarget on Windows. (Pierre)
- Implemented FR #50692, not uploaded files don't count towards
  max_file_uploads limit. As a side improvement, temporary files are not opened
  for empty uploads and, in debug mode, 0-length uploads. (Gustavo)
- Added a 3rd parameter to get_html_translation_table. It now takes a charset
  hint, like htmlentities et al. (Gustavo)
